--- a/languages/lazaruside.ca.po
+++ b/languages/lazaruside.ca.po
@@ -7098,8 +7098,8 @@ msgstr "Tipus:"
 msgid "UPPERCASE"
 msgstr "MAJÚSCULES"
 
-#: lazarusidestrconsts:rslanguageukranian
-msgid "Ukranian"
+#: lazarusidestrconsts:rslanguageukrainian
+msgid "Ukrainian"
 msgstr ""
 
 #: lazarusidestrconsts:lisunableconvertbinarystreamtotext
