--- a/languages/lazaruside.ar.po
+++ b/languages/lazaruside.ar.po
@@ -7109,8 +7109,8 @@ msgstr ""
 msgid "UPPERCASE"
 msgstr ""
 
-#: lazarusidestrconsts:rslanguageukranian
-msgid "Ukranian"
+#: lazarusidestrconsts:rslanguageukrainian
+msgid "Ukrainian"
 msgstr ""
 
 #: lazarusidestrconsts:lisunableconvertbinarystreamtotext
