--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -7098,8 +7098,8 @@ msgstr "פֹ׀:"
 msgid "UPPERCASE"
 msgstr "קועטמיך עוחיףפע"
 
-#: lazarusidestrconsts:rslanguageukranian
-msgid "Ukranian"
+#: lazarusidestrconsts:rslanguageukrainian
+msgid "Ukrainian"
 msgstr ""
 
 #: lazarusidestrconsts:lisunableconvertbinarystreamtotext
