--- a/languages/lazaruside.ruwin.po
+++ b/languages/lazaruside.ruwin.po
@@ -7098,8 +7098,8 @@ msgstr "Òèï:"
 msgid "UPPERCASE"
 msgstr "ÂÅĞÕÍÈÉ ĞÅÃÈÑÒĞ"
 
-#: lazarusidestrconsts:rslanguageukranian
-msgid "Ukranian"
+#: lazarusidestrconsts:rslanguageukrainian
+msgid "Ukrainian"
 msgstr ""
 
 #: lazarusidestrconsts:lisunableconvertbinarystreamtotext
